src_old/objects/ThirdpartyAgencyRecordsLocker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Thirdparty Agency Records Locker</relationshipLabel>
        <relationshipName>Thirdparty_Agency_Records_Locker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexJobName__c</fullName>
        <label>Apex Job Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkImportStatus__c</fullName>
        <label>Bulk Import Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Thirdparty Agency Records Locker</label>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thirdparty Agency Records Locker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>